--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "umask"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["dystroy <denys.seguret@gmail.com>"]
 repository = "https://github.com/Canop/umask"
 description = "utility to deal with unix access mode"
 edition = "2018"
-keywords = ["utilities"]
+keywords = ["unix", "umask", "permission", "mode"]
 license = "MIT"
-categories = ["unix"]
+categories = ["utilities"]
 readme = "README.md"
 
 [dependencies]
