--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "umask"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["dystroy <denys.seguret@gmail.com>"]
 repository = "https://github.com/Canop/umask"
 description = "utility to deal with unix access mode"
 edition = "2018"
 keywords = ["unix", "umask", "permission", "mode"]
 license = "MIT"
-categories = []
+categories = ["os::unix-apis"]
 readme = "README.md"
 
 [dependencies]
